[project]
name = "wxcc"
version = "0.1.0"
description = "WeChat <-> Claude Code bridge (iLink Bot API + Claude Agent SDK)"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42",
    "certifi",
    "qrcode>=7.4",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
wxcc = "wxcc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wxcc"]
